# cxx_creed

./: .gitignore  CMakeLists.txt
doc/: expression.txt
samples/: collatz_bottles.cpp  cout123.cpp  expression.cpp  fib20.cpp  named_hello.cpp
src/: CMakeLists.txt  ConsolePrinter.cpp  ConsolePrinter.h  Printer.h  main.cpp  util.cpp  util.h
src/dlc/: ExpansionPack.cpp  ExpansionPack.h  ExpressionParserDLC.cpp  ExpressionParserDLC.h  InterpreterDLC.h  LexerDLC.h  ParserDLC.h  WithDLC.h
src/dlc/expression_parsers/: AssignmentParser.cpp  AssignmentParser.h  BinaryOpParser.cpp  BinaryOpParser.h  IntegerParser.cpp  IntegerParser.h  ParensParser.cpp  ParensParser.h  StringParser.cpp  StringParser.h  UnaryOpParser.cpp  UnaryOpParser.h  VariableParser.cpp  VariableParser.h
src/dlc/lexers/: BlockCommentLexer.cpp  BlockCommentLexer.h  ExactLexer.cpp  ExactLexer.h  IdentifierLexer.cpp  IdentifierLexer.h  IncludeLexer.cpp  IncludeLexer.h  IntegerLexer.cpp  IntegerLexer.h  LineCommentLexer.cpp  LineCommentLexer.h  NewlineLexer.cpp  NewlineLexer.h  RegexpLexer.cpp  RegexpLexer.h  StringLexer.cpp  StringLexer.h  WhitespaceLexer.cpp  WhitespaceLexer.h
src/expression_parser/: ASTVisitor.h  ExpressionParser.cpp  ExpressionParser.h  Priority.h  TokenList.cpp  TokenList.h
src/expression_parser/ast/: ASTNode.h  AssignmentNode.cpp  AssignmentNode.h  BinaryOpNode.cpp  BinaryOpNode.h  IntegerNode.cpp  IntegerNode.h  StringNode.cpp  StringNode.h  UnaryOpNode.cpp  UnaryOpNode.h  VariableNode.cpp  VariableNode.h
src/interpreter/: Evaluator.cpp  Evaluator.h  GlobalScope.cpp  GlobalScope.h  Interpreter.cpp  Interpreter.h  InterpreterBase.cpp  InterpreterBase.h  Scope.cpp  Scope.h
src/interpreter/exceptions/: ArithmeticException.cpp  ArithmeticException.h  OperandTypeException.cpp  OperandTypeException.h  RuntimeException.cpp  RuntimeException.h  UnknownOpException.cpp  UnknownOpException.h
src/interpreter/types/: CoutType.cpp  CoutType.h  CoutValue.h  EndlType.cpp  EndlType.h  EndlValue.cpp  EndlValue.h  IntegerType.cpp  IntegerType.h  IntegerValue.cpp  IntegerValue.h  RealTypeBase.h  RealTypeBase.hpp  RealValueBase.h  RealValueBase.hpp  SingletonType.h  StringType.cpp  StringType.h  StringValue.cpp  StringValue.h  TypeBase.cpp  TypeBase.h  ValueBase.cpp  ValueBase.h  ValueFwd.h  ValueVisitor.h  ValueWithType.h
src/interpreter/types/special/: CinType.cpp  CinType.h  CinValue.cpp  CinValue.h  CoutType.cpp  CoutType.h  CoutValue.cpp  CoutValue.h  EndlType.cpp  EndlType.h  EndlValue.cpp  EndlValue.h  SpecialType.h  SpecialType.hpp  SpecialValue.h  SpecialValue.hpp
src/lexer/: Lexer.cpp  Lexer.h  Token.h
src/parser/: ASTVisitor.h  BeginMainDeclEvent.h  CachingParser.cpp  CachingParser.h  EOFEvent.cpp  EOFEvent.h  EventVisitor.h  EventVisitorAdapter.h  ExpressionParser.cpp  ExpressionParser.h  Parser.cpp  Parser.h  ParserBase.h  ReturnStmtEvent.cpp  ReturnStmtEvent.h  UnknownTokenEvent.cpp  UnknownTokenTypeEvent.cpp  UnknownTokenTypeEvent.h
src/parser/ast/: BinaryOpNode.cpp  BinaryOpNode.h  IntegerNode.cpp  IntegerNode.h  UnaryOpNode.cpp  UnaryOpNode.h
src/parser/events/: ASTEvent.h  BeginBlockDeclEvent.cpp  BeginBlockDeclEvent.h  BeginBlockStmtEvent.cpp  BeginBlockStmtEvent.h  BeginIfDeclEvent.cpp  BeginIfDeclEvent.h  BeginIfStmtEvent.cpp  BeginIfStmtEvent.h  BeginMainDeclEvent.cpp  BeginWhileDeclEvent.cpp  BeginWhileDeclEvent.h  BeginWhileStmtEvent.cpp  BeginWhileStmtEvent.h  EOFEvent.h  EndBlockDeclEvent.cpp  EndBlockDeclEvent.h  EndBlockStmtEvent.cpp  EndBlockStmtEvent.h  EndIfDeclEvent.cpp  EndIfDeclEvent.h  EndIfStmtEvent.cpp  EndIfStmtEvent.h  EndMainDeclEvent.cpp  EndMainDeclEvent.h  EndWhileDeclEvent.cpp  EndWhileDeclEvent.h  EndWhileStmtEvent.cpp  EndWhileStmtEvent.h  ExprStmtEvent.cpp  ExprStmtEvent.h  IncludeEvent.cpp  IncludeEvent.h  ParseErrorEvent.cpp  ParseErrorEvent.h  ReturnStmtEvent.cpp  ReturnStmtEvent.h  UnknownTokenEvent.h  VarDeclEvent.cpp  VarDeclEvent.h
src/parser/miniparsers/: BlockMiniparser.cpp  BlockMiniparser.h  IfMiniparser.cpp  IfMiniparser.h  MainMiniparser.cpp  MainMiniparser.h  Miniparser.cpp  Miniparser.h  WhileMiniparser.cpp  WhileMiniparser.h
tests/: CMakeLists.txt  EvaluatorTests.cpp  ExpressionParserTests.cpp  InterpreterTests.cpp  LexerTests.cpp  ParserTests.cpp
tests/helpers/: ASTNodeString.cpp  ASTNodeString.h  EventRecorder.cpp  EventRecorder.h  ExpressionChecker.cpp  ExpressionChecker.h  InterpreterChecker.cpp  InterpreterChecker.h  ParserChecker.cpp  ParserChecker.h  TestPrinter.cpp  TestPrinter.h  types.h
